
[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[package]
name = "scant3r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
members = ["units","scanners"]

[[bin]]
name = "scant3r"
path = "cli/main.rs"

[dependencies]
scant3r_utils = { path ="./utils" }
scanners = { path = "./scanners" }
clap = "3.0.14"
console = "0.15.0"
