[package]
name = "scanners"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scant3r_utils = {path = "../utils"}
url = "2.2.2"
home = "0.5.3"
log = "0.4.14"
async-trait = "0.1.52"
indicatif = "0.16.2"
console = "0.15.0"
next-gen = "0.1.1"
fantoccini = "0.18.0"
futures = "0.3.19"
