[package]
name = "scanners"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scant3r_utils = {path = "../utils"}
url = "2.2.2"
home = "0.5.3"
log = "0.4.14"
async-trait = "0.1.52"
indicatif = "0.16.2"
console = "0.15.0"
futures = "0.3.19"
scraper = "0.12.0"
urlencoding = "2.1.0"
fancy-regex = "0.8.0"
