[package]
name = "scant3r_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = "1.6.0"
url = "2.2.2"
regex = "1.0"
tokio = { version = "0.2.18", features = ["full"] }
async-trait = "0.1.52"
serde_json = "1.0.79"
