[package]
name = "scant3r_utils"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.0"
rand = "0.6.5"
urlencoding = "2.1.0"
rayon = "1.5.2"
reqwest = { version = "0.11.10", features = ["blocking"] }
